feat: Display the selected filename in the UI when a file is uploaded
- Added a <div id="uploadedFileName"> element in index.html to show the current file name
- Added an event listener on "fileInput" for the "change" event to update the displayed filename
- Updated CSS to style the displayed filename
- Ensured the file name is shown immediately after file selection

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <section>
       <p>ファイルをアップロードしてください。<br />
         アップロードしたファイル名を正規表現でチェックします。<br />
-        <strong>例）</strong> 半角英数字とアンダースコアのみOK など
+        <strong>例）</strong> 半角英数字とアンダースコアのみOKなど
       </p>
       <div class="upload-area">
         <label for="fileInput" class="file-label">ファイルを選択</label>
         <input type="file" id="fileInput" accept="*/*" />
       </div>
+
+      <!-- ここが追加ポイント -->
+      <div id="uploadedFileName" class="uploaded-file-name">
+        （現在アップロードしているファイル名が表示されます）
+      </div>
+      <!-- 追加ポイントここまで -->
 
       <div class="regex-area">
         <label for="regexPattern" class="regex-label">正規表現パターンを入力：</label>
