fix: Add missing closing tags in index.html
- Closed <li>, </ul>, </section>, </main>, </body>, and </html> tags
- Ensures proper HTML structure for the file name checker to function correctly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>
         以下の形式のファイル名でアップロードしてください。<br />
         例：<br />
-        ・<strong>データ処理1101_第5回演習1_243360003山田太郎.pdf</strong><br />
+        ・<strong>データ処理1101_第5回演習1_243360003山田太郎.拡張子</strong><br />
         (拡張子は URLパラメータ ?ext=docx, ?ext=pdf, ?ext=xlsx 等で切り替え)
       </p>
 
@@ -61,4 +61,26 @@
         </li>
         <li>
           <strong>文字コードの違いで見た目が同じでも別の文字になっていないか</strong><br />
-          例：「デ」が「テ+結合濁点」になっているケースなど。アップロード時はファイル名の濁点や拗音などに注意
+          例：「デ」が「テ+結合濁点」になっているケースなど。アップロード時はファイル名の濁点や拗音などに注意してください。
+        </li>
+        <li>
+          <strong>大文字と小文字を区別するサービスの場合に注意</strong><br />
+          例：拡張子 <code>.DOCX</code> と <code>.docx</code> の扱いが異なる場合があります。大文字小文字は正しく揃えましょう。
+        </li>
+        <li>
+          <strong>ファイル名が長すぎたり、区切りが不明瞭になっていないか</strong><br />
+          必要な情報を簡潔にまとめつつ、環境によっては長すぎるファイル名を扱いきれないこともあるため注意してください。
+        </li>
+      </ul>
+    </section>
+    <!-- 注意喚起のセクションここまで -->
+
+  </main>
+
+  <footer>
+    <p class="footer-text">&copy; 2024 Regex Checker</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
