--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>
         以下の形式のファイル名でアップロードしてください。<br />
         例：<br />
-        ・<strong>データ処理1101_第5回演習1_243360003山田太郎.拡張子</strong><br />
+        ・<strong>データ処理1101_第5回演習1_243360003山田太郎.pdf</strong><br />
         (拡張子は URLパラメータ ?ext=docx, ?ext=pdf, ?ext=xlsx 等で切り替え)
       </p>
 
